--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
             <nav class="main-nav">
               <div class="main-nav__box">
                 <div class="nav__icon-close">
-                  <i class="ion ion-md-close"></i>
+                  <ion-icon class="ion ion-md-close" name="close-outline"></ion-icon>
                 </div>
                 <ul class="nav__list list-reset">
                   <li class="nav__item">
@@ -38,8 +38,8 @@
               </div>
             </nav>
             <div class="nav-buttons">
-              <i class="nav__icon nav__icon-menu ion ion-md-menu"></i>
-              <i class="nav__icon nav__icon-search ion ion-md-search"></i>
+              <ion-icon class="nav__icon nav__icon-menu ion" name="menu-outline"></ion-icon>
+              <ion-icon class="nav__icon nav__icon-search ion" name="search-outline"></ion-icon>
             </div>
           </div>
 
