--- a/_sass/3-modules/_pagination.scss
+++ b/_sass/3-modules/_pagination.scss
@@ -28,7 +28,7 @@
   background-color: $dark;
   transition: all .2s ease-in-out;
   cursor: pointer;
-  i {
+  ion-icon {
     margin-left: 5px;
   }
   &:hover {
