--- a/_includes/contact-link.html
+++ b/_includes/contact-link.html
@@ -3,7 +3,7 @@
     <ul class="contact__list list-reset">
       {% for contact in site.contact %}
       <li class="contact__item">
-        <a class="contact__link" href="{{contact.link}}" target="_blank"><i class="ion {{contact.icon}}"></i> {{contact.name}}</a>
+        <a class="contact__link" href="{{contact.link}}" target="_blank"><ion-icon class="ion" name="{{contact.icon}}"></ion-icon>{{contact.name}}</a>
       </li>
       {% endfor %}
     </ul>
