--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     {{ content }}
   </main> 
   <!-- end content -->
-  <div class="top" title="Top"><i class="ion ion-ios-arrow-up"></i></div>
+  <div class="top" title="Top"><ion-icon class="ion" name="chevron-up-outline"></ion-icon></div>
   
   {% include footer.html %}
   {% include javascripts.html %}
